[tool.poetry]
name = "repl-nix-ytdownloder-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_ytdownloder_1"}]

[tool.poetry.dependencies]
python = "^3.12"
pytube = "^15.0.0"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
